--- a/src/components/button/_button.scss
+++ b/src/components/button/_button.scss
@@ -171,9 +171,9 @@
   }
 
   .#{$prefix}--btn--sm {
+    @include letter-spacing;
     height: 2rem;
     padding: $button-padding-sm;
-    letter-spacing: 0;
   }
 
   .#{$prefix}--btn--secondary + .#{$prefix}--btn--primary,
