--- a/src/globals/scss/_typography.scss
+++ b/src/globals/scss/_typography.scss
@@ -68,7 +68,7 @@ $typescale-map: (
 }
 
 @mixin letter-spacing {
-  letter-spacing: 0.5px;
+  letter-spacing: 0;
 }
 
 $font-size-map: (
@@ -81,8 +81,8 @@ $font-size-map: (
   '16' : 1rem,
   '14' : 0.875rem,
   '12' : 0.75rem,
-  '11' : 0.6875rem,
- );
+  '11' : 0.6875rem
+);
 
 @mixin font-size($size) {
   @if map-has-key($font-size-map, $size) {
